--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  transition: 0.3s;
+}
+
+button, input {
+  border: none;
+  outline: none;
+}
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
