--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ select {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
